# kage

./: .gitignore  Cargo.toml  DEVLOG.md  README.md  devlog.md
src/: glyph.rs  lib.rs  main.rs  profile.rs
src/font/: loader.rs  mod.rs
src/layout/: mod.rs  pentile.rs
src/render/: grayscale.rs  mod.rs  oled_aware.rs  subpixel_aa.rs
src/simulate/: bleed.rs  gamma.rs  mod.rs  psf.rs
src/subpixel/: grid.rs  mod.rs
src/viz/: inspector.rs  mod.rs
